2015-12-09 post, template edted

--- a/_posts/2015-12-09-On-HIV.md
+++ b/_posts/2015-12-09-On-HIV.md
@@ -33,3 +33,6 @@ Having said all that, we may find ourselves facing several other questions, such
   * etc.
 
 However, to answer those questions we must also conduct an actual statistical study, which is definitely too complex and too irrelevant as of this blog: here I present only my observations, not conclusions.
+
+&nbsp;
+
