--- a/_posts/2015-12-09-On-HIV.md
+++ b/_posts/2015-12-09-On-HIV.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: On HIV/AIDS rate in Estonia
+title: On HIV/AIDS rates in Estonia
 ---
 
 During its long history, the humankind faced various diseases and epidemics. However, their spread and consequences not always depended strictly on the viruses itself. Having said that, let's examine the rise of HIV/AIDS by the example of the small Baltic state Estonia.
@@ -18,6 +18,7 @@ Having in mind that as of 01-01-2010, the population of Estonia [included](http:
 ![divided rates, another angle](http://i.imgur.com/lf3BCee.png)
 
 Moreover, according to the [presentation by Dr. Paul Downes](https://www.ucl.ac.uk/nordicbaltic/HealthWelfare/PaulSlides), as from 1 October 2009 to 7 June 2010, 115 new persons were registered as HIV-positive (page 25). Those can be separated according to the social-economic status, too:
+
   * 44% - prisoners
   * 31% - unemployed
   * 18% - working
@@ -28,6 +29,7 @@ Moreover, according to the [presentation by Dr. Paul Downes](https://www.ucl.ac.
 ![by social-economic status](http://i.imgur.com/2YZ8qIL.png)
 
 Having said all that, we may find ourselves facing several other questions, such as the following:
+
   * The Russian population of Estonia may (or may not) be far worse integrated into the social-economic life of the state;
   * The spread of HIV/AIDS may (may not) be attributed to the social-economic status of patients;
   * etc.
