2015-12-09 post edited, take 4

--- a/_posts/2015-12-09-On-HIV.md
+++ b/_posts/2015-12-09-On-HIV.md
@@ -26,7 +26,13 @@ Moreover, according to the [presentation by Dr. Paul Downes](https://www.ucl.ac.
   * 3% - disability / age pensioners
   * 2% - on maternity leave
 
-![by social-economic status](http://i.imgur.com/2YZ8qIL.png)
+Which can be, too, visualized in one way:
+
+![by social-economic status](http://i.imgur.com/DusTokv.png)
+
+Or another:
+
+![by social-economic status, take 2](http://i.imgur.com/zeoXblQ.png)
 
 Having said all that, we may find ourselves facing several other questions, such as the following:
 
