2015-12-09 post edited, graphs standardised

--- a/_posts/2015-12-09-On-HIV.md
+++ b/_posts/2015-12-09-On-HIV.md
@@ -7,15 +7,18 @@ During its long history, the humankind faced various diseases and epidemics. How
 
 First, let's investigate estimates of the percentage of adults (aged 15-49) living with HIV/AIDS in Estonia and some neighboring states (the adult prevalence rate is calculated by dividing the estimated number of adults living with HIV/AIDS by the total adult population). According The World Factbook by the CIA, here are the actual rates as of year 2009:
 
-![general rates](http://i.imgur.com/lIMwi0u.png)
+<!-- ![general rates](http://i.imgur.com/lIMwi0u.png) -->
+![general rates](http://i.imgur.com/51VJBzt.png)
 
 Now, according to the [study](http://rahvatervis.ut.ee/bitstream/1/1582/1/L%C3%B5hmusjt2009_1.pdf), published the National Institute for Health Development of Estonia in 2009, patients, who went to see a HIV-Infectionist in three different cities, Tallinn, Kohtla-Jaerve and Narva, can be divided into three main groups according to the nationality (page 9, table 3): Russians account for 83.1%, Estonians for 11.1% and all the others for 5.8%. If for simplicity we now combine Estonians with the other nationalities, the previous graph can be transformed in the following way:
 
-![divided rates](http://i.imgur.com/kVRcELL.png)
+<!-- ![divided rates](http://i.imgur.com/kVRcELL.png) -->
+![divided rates](http://i.imgur.com/aR8V3Nv.png)
 
 Having in mind that as of 01-01-2010, the population of Estonia [included](http://estonia.eu/about-estonia/country/population-by-nationality.html) 25.5% of Russians, we can calculate separate rates for the nationalities:
 
-![divided rates, another angle](http://i.imgur.com/lf3BCee.png)
+<!-- ![divided rates, another angle](http://i.imgur.com/lf3BCee.png) -->
+![divided rates, another angle](http://i.imgur.com/917wZ3R.png)
 
 Moreover, according to the [presentation by Dr. Paul Downes](https://www.ucl.ac.uk/nordicbaltic/HealthWelfare/PaulSlides), as from 1 October 2009 to 7 June 2010, 115 new persons were registered as HIV-positive (page 25). Those can be separated according to the social-economic status, too:
 
@@ -28,7 +31,8 @@ Moreover, according to the [presentation by Dr. Paul Downes](https://www.ucl.ac.
 
 Which can be, too, visualized in one way:
 
-![by social-economic status](http://i.imgur.com/DusTokv.png)
+<!-- ![by social-economic status](http://i.imgur.com/DusTokv.png) -->
+![by social-economic status](http://i.imgur.com/35Bea0s.png)
 
 Or another:
 
