--- a/_posts/2015-12-22-On-oil.md
+++ b/_posts/2015-12-22-On-oil.md
@@ -11,7 +11,7 @@ Note the intersection and the switch of leads that occured back in 2014, it's ma
 
 ![delta](https://i.imgur.com/Ft5bcqW.png)
 
-First, it's easy to note how huge it was in the late 2014 and during the whole 2015. And next -- that it's going to shrink down in 2016. Why so? As EIA states, that's because of the decline in the production by non-OPEC states:
+First, it's easy to note how huge it was in the late 2014 and during the whole 2015. And next -- that it's going to shrink down in 2016. Why so? As EIA states, that's because of the decline in the production by non-OPEC states<sup>[1]</sup>:
 
 ![non-OPEC](http://i.imgur.com/TPsWSyG.png)
 
@@ -24,5 +24,7 @@ Apparently, it the United States itself, who are to blame:
 Then, how will it affect the price? My guess is not much: the spread between the consumption and the production is still pretty solid, and that reality is to be here for some time. On the other hand, having in mind the lifting of the export ban and the return of the Iran, decline in some -- unprofitable -- projects will only support and bolster others, which are steadier for now.
 
 
+-- 
+<small><sup>[1]</sup> -- Goldman Sachs [do not agree](http://www.ft.com/cms/s/0/b72ed024-a89f-11e5-955c-1e1d6de94879.html), though.</small>
 &nbsp;
 
