--- a/_posts/2015-12-22-On-oil.md
+++ b/_posts/2015-12-22-On-oil.md
@@ -11,7 +11,7 @@ Note the intersection and the switch of leads that occured back in 2014, it's ma
 
 ![delta](https://i.imgur.com/Ft5bcqW.png)
 
-First, it's easy to note how huge it was in the late 2014 and during the whole 2015. And next -- that it's going to shrink down in 2016. Why so? As EIA states, that's because of the decline in the production by non-OPEC states<sup>[1]</sup>:
+First, it's easy to note how huge it was in the late 2014 and during the whole 2015. And next -- that it's going to shrink down in 2016. Why so? As EIA states, that's because of the decline in the production by non-OPEC states<sup>1</sup>:
 
 ![non-OPEC](http://i.imgur.com/TPsWSyG.png)
 
@@ -25,6 +25,8 @@ Then, how will it affect the price? My guess is not much: the spread between the
 
 
 -- 
-<small><sup>[1]</sup> -- Goldman Sachs [do not agree](http://www.ft.com/cms/s/0/b72ed024-a89f-11e5-955c-1e1d6de94879.html), though.</small>
+
+<small><sup>1</sup> -- Goldman Sachs [do not agree](http://www.ft.com/cms/s/0/b72ed024-a89f-11e5-955c-1e1d6de94879.html), though.</small>
+
 &nbsp;
 
