--- a/_posts/2015-12-22-On-oil.md
+++ b/_posts/2015-12-22-On-oil.md
@@ -24,9 +24,9 @@ Apparently, it the United States itself, who are to blame:
 Then, how will it affect the price? My guess is not much: the spread between the consumption and the production is still pretty solid, and that reality is to be here for some time. On the other hand, having in mind the lifting of the export ban and the return of the Iran, decline in some -- unprofitable -- projects will only support and bolster others, which are steadier for now.
 
 
-<small>-- 
+__
 
-¹ -- Goldman Sachs [do not agree](http://www.ft.com/cms/s/0/b72ed024-a89f-11e5-955c-1e1d6de94879.html), though.</small>
+¹ -- Goldman Sachs [do not agree](http://www.ft.com/cms/s/0/b72ed024-a89f-11e5-955c-1e1d6de94879.html), though.
 
 &nbsp;
 
