--- a/_posts/2015-12-22-On-oil.md
+++ b/_posts/2015-12-22-On-oil.md
@@ -7,7 +7,7 @@ Today, as oil falls to record lows, many of us may wonder, what will happen to t
 
 ![production-vs-consumption](https://i.imgur.com/FLpeQT8.png)
 
-Note the intersection and the switch of leads that occured back in 2014, it's main responsible factor for the future decline in prices. Now, let's calculate the delta between these two:
+Note the intersection and the switch of leads that occured back in 2014, isn't it, an oversupply, a serious factor for the current decline in prices? After all, it's the demand that dictates prices, and if demand is met with surplus, wouldn't it affect the price? For a better visualization, let's calculate and picture the delta between these two:
 
 ![delta](https://i.imgur.com/Ft5bcqW.png)
 
