--- a/_posts/2015-12-22-On-oil.md
+++ b/_posts/2015-12-22-On-oil.md
@@ -23,10 +23,19 @@ Apparently, it the United States itself, who are to blame:
 
 Then, how will it affect the price? My guess is not much: the spread between the consumption and the production is still pretty solid, and that reality is to be here for some time. On the other hand, having in mind the lifting of the export ban and the return of the Iran, decline in some -- unprofitable -- projects will only support and bolster others, which are steadier for now.
 
+**Updated:** OPEC [agrees](http://www.wsj.com/articles/opec-report-suggests-oil-price-rebound-supply-cut-1450864802) to a certain extent:
 
-__
+> The “need to develop oil production in more expensive areas will drive long-term oil prices higher,” OPEC said in its report. Much of the recent oversupply has been led by the development of costly reservoirs in the U.S. and Canada, which started to slow after oil prices more than halved in the past year.
 
-¹ -- Goldman Sachs [do not agree](http://www.ft.com/cms/s/0/b72ed024-a89f-11e5-955c-1e1d6de94879.html), though.
+On the other side, they also note that:
+
+> …oil supply from the U.S. and Canada would reach 19.8 million barrels a day by 2020, an increase of 2.5 million barrels a day over 2014.Even production of U.S. light-tight oil—in which hydraulic-fracturing techniques extract crude from shale formations, at a cost often higher than $50 a barrel—is expected to rise to 5.2 million barrels a day in 2020 from 4.4 million barrels a day this year, according to the organization.
+
+And Goldman Sachs seems to [second that](http://www.ft.com/cms/s/0/b72ed024-a89f-11e5-955c-1e1d6de94879.html):
+
+> In a report Goldman said global oil production had outpaced demand by a “significant” 1.5m barrels a day in the fourth quarter, a level that could be sustained into the second half of next year because of production “surprises” and mild winter weather, which has dented demand.
+> 
+> “We view the oversupply as continuing well into next year before rebalancing in the fourth quarter of 2016,” said the report, which repeated the bank’s view that prices may need to fall to $20 to rebalance the market.
 
 &nbsp;
 
